update resume pdf

--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@
     <div id="root"></div>
   </body>
 
-<!-- Mirrored from humbletech.cloud/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 08 Jun 2025 00:03:23 GMT -->
+<!-- Mirrored from victornwoke.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 09 Nov 2025 00:03:23 GMT -->
 </html>
